--- a/portfolioproject/core/templates/core/base.html
+++ b/portfolioproject/core/templates/core/base.html
@@ -6,7 +6,7 @@
     <title>Parth Tripathi | Portfolio</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'core/style.css' %}">
 
     <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
