--- a/portfolioproject/core/templates/core/base.html
+++ b/portfolioproject/core/templates/core/base.html
@@ -16,7 +16,7 @@
     <!-- 🔹 Navbar -->
     <nav class="navbar">
     <div class="logo">
-        <a href="/">Parth</a>
+        <a href="/">Parth Tripathi</a>
     </div>
 
     <ul class="nav-links">
