--- a/portfolioproject/core/templates/core/home.html
+++ b/portfolioproject/core/templates/core/home.html
@@ -4,18 +4,18 @@
 {% block content %}
 <section class="hero">
 
-    <!-- 🔥 LEFT: NEON PHOTO -->
+    
     <div class="hero-image">
         <img src="{% static 'core/cv.jpg' %}" alt="Parth Tripathi">
     </div>
 
-    <!-- ✨ RIGHT: TEXT CONTENT -->
+    
     <div class="hero-text">
         <h1>
-            Hi, I’m <span>Parth Tripathi</span> 👋
+            Hi, I’m <span>Parth Tripathi</span> 🙏🏻
         </h1>
         <h2>
-            Full-Stack Developer | Django | JavaScript
+            Data Science | Django | Full Stack Web Development
         </h2>
         <p>
             I build clean, scalable, and beautiful web applications.
