--- a/portfolioproject/core/templates/core/contact.html
+++ b/portfolioproject/core/templates/core/contact.html
@@ -14,6 +14,7 @@
 
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
+            <input type="tel" name="phone" placeholder="Your Contact Number" required>
             <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
 
             <button type="submit" class="btn primary">Send Message 🚀</button>
