--- a/portfolioproject/core/templates/core/project.html
+++ b/portfolioproject/core/templates/core/project.html
@@ -1,5 +1,51 @@
 {% extends "core/base.html" %}
+{% load static %}
 
 {% block content %}
-<h1>Projects Page</h1>
+<section class="projects-section">
+
+    <h1>My Projects 💻</h1>
+
+    <div class="projects-grid">
+
+        <div class="project-card">
+
+            <img src="{% static 'core/insight.png' %}"
+                 alt="IncSight Project"
+                 class="project-image">
+
+
+            <h2>IncSight - Business Growth Analysis</h2>
+            <p>Data analysis project based on Inc. 5000 companies dataset.</p>
+            <div class="project-links">
+                <a href="https://github.com/parth08144/IncSight-Business-Growth-Analysis-from-Inc.-5000"
+                   target="_blank"
+                   class="btn primary">
+                   View on GitHub
+                </a>
+            </div>
+        </div>
+
+        <div class="project-card">
+
+
+            <img src="{% static 'core/todo.png' %}"
+                 alt="To-Do List App"
+                 class="project-image">
+
+
+            <h2>To-Do List App</h2>
+            <p>Django-based task management application with CRUD functionality.</p>
+            <div class="project-links">
+                <a href="https://github.com/parth08144/To-do-list"
+                   target="_blank"
+                   class="btn primary">
+                   View on GitHub
+                </a>
+            </div>
+        </div>
+
+    </div>
+
+</section>
 {% endblock %}
