small changes on project file

--- a/portfolioproject/core/templates/core/project.html
+++ b/portfolioproject/core/templates/core/project.html
@@ -35,7 +35,7 @@
 
 
             <h2>To-Do List App</h2>
-            <p>Django-based task management application with CRUD functionality.</p>
+            <p>Django-based To-Do List application.</p>
             <div class="project-links">
                 <a href="https://github.com/parth08144/To-do-list"
                    target="_blank"
