--- a/portfolioproject/core/templates/core/base.html
+++ b/portfolioproject/core/templates/core/base.html
@@ -6,7 +6,7 @@
     <title>Parth Tripathi | Portfolio</title>
 
     
-    <link rel="stylesheet" href="{% static 'core/style_v4.css' %}">
+    <link rel="stylesheet" href="{% static 'core/style_v3.css' %}">
 
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,3 +44,12 @@
 
 </body>
 </html>
+
+{% if user.is_authenticated %}
+    <a href="/add-project/">Add Project</a>
+    <a href="/logout/">Logout</a>
+{% else %}
+    <a href="/login/">Login</a>
+    <a href="/signup/">Signup</a>
+{% endif %}
+
