--- a/portfolioproject/core/templates/core/base.html
+++ b/portfolioproject/core/templates/core/base.html
@@ -20,10 +20,21 @@
     </div>
 
     <ul class="nav-links">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about/">About</a></li>
-        <li><a href="/projects/">Projects</a></li>
-        <li><a href="/contact/">Contact</a></li>
+        
+    <li><a href="{% url 'home' %}">Home</a></li>
+    <li><a href="{% url 'about' %}">About</a></li>
+    <li><a href="{% url 'projects' %}">Projects</a></li>
+    <li><a href="{% url 'contact' %}">Contact</a></li>
+
+    {% if user.is_authenticated %}
+        {% if user.is_superuser %}
+            <li><a href="{% url 'add_project' %}">Add Project</a></li>
+        {% endif %}
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+    {% else %}
+        <li><a href="{% url 'login' %}">Login</a></li>
+    {% endif %}
+
     </ul>
 </nav>
 
@@ -34,22 +45,12 @@
         {% endblock %}
     </main>
 
-    <!-- 🔹 Footer -->
-    {% comment %} <footer class="footer">
-        <p>© 2026 Parth Tripathi. All rights reserved.</p>
-    </footer> {% endcomment %}
-
+    
     
     <script src="{% static 'core/js/main.js' %}"></script>
 
 </body>
 </html>
 
-{% if user.is_authenticated %}
-    <a href="/add-project/">Add Project</a>
-    <a href="/logout/">Logout</a>
-{% else %}
-    <a href="/login/">Login</a>
-    <a href="/signup/">Signup</a>
-{% endif %}
+
 
